# qnbk

./: .gitignore  .pre-commit-config.yaml  Brewfile  Makefile  README.md  pyproject.toml
data/latex/: latex_template.tex
data/mathematics/ch1/: q1.md  q2.md  q3.md  q_1.md  q_2.md
src/qnbk/: Welcome.py  __init__.py  app.py  utils.py  welcome.py
src/qnbk/pages/: 1_Question_creation.py  2_Question_compilation.py  3_Question_editor.py
