[project]
name = "pyQBnk"
description = ""
license = "LicenseRef-Proprietary"
readme = "README.md"
package-mode = false
authors = [{ name = "Balaji.Pokuri", email = "abc@cdf.com" }]
# Set Python constraints for PEP 621
requires-python = ">=3.12.0,<3.15.0"
dynamic = [
  "version",      # updated by 'make build', see note below
  "dependencies", # managed by poetry for range flexibility
]

[tool.poetry]
packages = [{ include = "qnbk", from = "src" }]
# DO NOT CHANGE version PROPERTY. This is managed.
# Use 'make build' to produce a whl and override this with ARTIFACT_VERSION.
# poetry-dynamic-versioning will govern it.
# pre-commit will revert it on commit.
version = "0.0.0"

[tool.poetry.requires-plugins]
# requirements.txt export for deps in containers via 'make poetry-export'
poetry-plugin-export = ">=1.8"
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry-dynamic-versioning]
enable = true
pattern = "default-unprefixed"

[project.scripts]
# List each executable and the module:method that is the entrypoint for it.

[tool.poetry.dependencies]
# Set Python constraints for Poetry
python = ">=3.12,<3.15"
# better logging: from loguru import logger; logger.info("something: {}", data)
loguru = "*"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
# lightning fast linter and style checker
ruff = "*"
# pre-commit hooks
pre-commit = "*"

###
# Below here are rarely-touched settings for the various tools used in this project.
# N.b. Change the Python versions below when changing tool.poetry.dependencies.python above.
###
[tool.ruff]
# Same as Black.
line-length = 119
target-version = "py310"
exclude = [".*", "dist", "__pypackages__", "build", "venv", "dev"]

[tool.ruff.lint]
select = [
  "A",     # flake8 built-ins
  "ANN",   # annotations
  "ASYNC", # async
  "B",     # bugbear
  "COM",   # commas
  "C4",    # comprehensions
  # "C90",# mccabe; disabled in template; see to enable: https://docs.astral.sh/ruff/settings/#lintmccabe
  "D",   # pydocstyle
  "DOC", # pydoclint; unavailable without preview, but we want it when it is out of preview
  "DTZ", # datetime
  "E",   # pycodestyle errors
  "EM",  # error messages
  "F",   # pyflakes
  "G",   # logging format
  "I",   # import sorting
  "ICN", # import conventions
  "LOG", # logging
  "NPY", # numpy
  "PD",  # pandas-vet
  "PLC", # pylint conventions
  "PLE", # pylint errors
  "PLW", # pylint warnings
  "PT",  # pytest
  "Q",   # quotes
  "RET", # returns
  "RSE", # raise
  "RUF", # ruff
  "SIM", # simplify
  "TID", # tidy imports
  "TRY", # try
  "UP",  # pyupgrade
  "W",   # pycodestyle warnings
]
ignore = [
  # PD901: Avoid using the generic variable name `df` for DataFrames
  "PD901",
  # D203: Incorrect blank link before class
  "D203",
  # D213: Multi-line summary second line
  "D213",
  # D400: First line should end with a period
  "D400",
  # D415: First line should end with a period, question mark, or exclamation point
  "D415",
  # COM812: Missing trailing commas; conflicts w/ ruff format, which handles this
  "COM812",
  "N",      # pep8-naming
  "PERF",   # perflint; disabled in template; see to enable: https://docs.astral.sh/ruff/rules/#perflint
  "UP022",  # prefer `capture_output` instead of `stdout` to `PIPE`
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
  "D",       # pydocstyle, pydoclint
  "DOC",
  "T201",    # no print
  "G004",    # log format
  "ANN001",  # argument type annotation
  "ANN201",  # function return type annotation
  "PLC0415", # import-outside-top-level; required in some tests
]


[build-system]
requires = [
  "poetry-core>=2.0.0,<3.0.0",
  "poetry-dynamic-versioning>=1.0.0,<2.0.0",
]
build-backend = "poetry_dynamic_versioning.backend"
